--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -33,52 +33,22 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Terraform Init & Validate
         run: |
+          # Setup
           cd Infra/setup
           docker compose run --rm terraform -chdir=. init -backend=false
           docker compose run --rm terraform -chdir=. validate
           docker compose run --rm terraform -chdir=. fmt --check
-
+          
+          # Deploy
           cd ../deploy
           docker compose run --rm terraform -chdir=. init -backend=false
           docker compose run --rm terraform -chdir=. validate
           docker compose run --rm terraform -chdir=. fmt --check
 
-
-  build_and_push:
-    name: Build & Push Docker Images to ECR
-    runs-on: ubuntu-22.04
-    needs: [python, terraform]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Login to ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build & Push APP
-        run: |
-          docker build -t app-image -f Dockerfile .
-          docker tag app-image:latest ${{ vars.ECR_REPO_APP }}:latest
-          docker push ${{ vars.ECR_REPO_APP }}:latest
-
-      - name: Build & Push PROXY
-        run: |
-          docker build -t proxy-image -f proxy/Dockerfile proxy
-          docker tag proxy-image:latest ${{ vars.ECR_REPO_PROXY }}:latest
-          docker push ${{ vars.ECR_REPO_PROXY }}:latest
-
-
   deploy:
     name: Deploy
     runs-on: ubuntu-22.04
-    needs: [build_and_push]     
+    needs: [python, terraform]
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -86,13 +56,25 @@ jobs:
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
       TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
       TF_VAR_django_secret_key: ${{ secrets.TF_VAR_DJANGO_SECRET_KEY }}
-      TF_VAR_ecr_proxy_image: ${{ vars.ECR_REPO_PROXY }}:latest
-      TF_VAR_ecr_app_image: ${{ vars.ECR_REPO_APP }}:latest
+      TF_VAR_ecr_proxy_image: ${{ vars.ECR_REPO_PROXY }}
+      TF_VAR_ecr_app_image: ${{ vars.ECR_REPO_APP }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Deploy Terraform
         run: |
           docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy init
           docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy apply -auto-approve
+
+
+
+
+
+
