--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -69,30 +69,33 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to AWS ECR
+        env:
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         run: |
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+          aws ecr get-login-password --region $AWS_DEFAULT_REGION | \
+          docker login --username AWS --password-stdin 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
 
-      - name: Create ECR Repository if not exists
-        run: |
-          aws ecr describe-repositories --repository-names recipe-app-api-app || \
-          aws ecr create-repository --repository-name recipe-app-api-app
-          aws ecr describe-repositories --repository-names recipe-app-api-proxy || \
-          aws ecr create-repository --repository-name recipe-app-api-proxy
+            - name: Create ECR Repository if not exists
+              run: |
+                aws ecr describe-repositories --repository-names recipe-app-api-app || \
+                aws ecr create-repository --repository-name recipe-app-api-app
+                aws ecr describe-repositories --repository-names recipe-app-api-proxy || \
+                aws ecr create-repository --repository-name recipe-app-api-proxy
 
-      - name: Build and Push Docker Images to ECR
-        run: |
-          docker build -t recipe-app-api-app .
-          docker tag recipe-app-api-app:latest 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-app:latest
-          docker push 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-app:latest
+            - name: Build and Push Docker Images to ECR
+              run: |
+                docker build -t recipe-app-api-app .
+                docker tag recipe-app-api-app:latest 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-app:latest
+                docker push 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-app:latest
 
-          docker build -t recipe-app-api-proxy ./proxy
-          docker tag recipe-app-api-proxy:latest 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-proxy:latest
-          docker push 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-proxy:latest
+                docker build -t recipe-app-api-proxy ./proxy
+                docker tag recipe-app-api-proxy:latest 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-proxy:latest
+                docker push 898949652444.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/recipe-app-api-proxy:latest
 
-      - name: Deploy Terraform
-        run: |
-          docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy init
-          docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy apply -auto-approve
+            - name: Deploy Terraform
+              run: |
+                docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy init
+                docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy apply -auto-approve
 
 
 
