--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -54,23 +54,17 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       TF_WORKSPACE: ${{ secrets.TF_WORKSPACE }}
-      TF_VAR_DB_PASSWORD: ${{ secrets.TF_VAR_DB_PASSWORD }}
-      TF_VAR_DJANGO_SECRET_KEY: ${{ secrets.TF_VAR_DJANGO_SECRET_KEY }}
+      TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
+      TF_VAR_django_secret_key: ${{ secrets.TF_VAR_DJANGO_SECRET_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Deploy Terraform
         run: |
           docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy init
           docker compose -f docker-compose-deploy.yml run --rm terraform -chdir=deploy apply -auto-approve
-
-
-
-
